--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -64,7 +64,7 @@
                                         <div class="col-xl-2 col-lg-2 col-md-3  col-4 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label></mat-label>
-                                                <mat-select name="Position" [(ngModel)]="data.Title" #Gendercontrol>
+                                                <mat-select name="Title" [(ngModel)]="data.Title" #Titlecontrol>
                                                     <mat-option value="MR.">Mr.</mat-option>
                                                     <mat-option value="Mrs.">Mrs.</mat-option>
                                                     <mat-option value="Miss.">Miss.</mat-option>
