--- a/server/views/AssignFitterPDF.ejs
+++ b/server/views/AssignFitterPDF.ejs
@@ -31,7 +31,7 @@
             <table style="width: 30%; float: left; border: none; margin-bottom: 2%;">
                <tr>
                  <th style="border: none;text-align: left;">Name</th>
-                 <td style="border: none;">: <%=i.CustomerName%></td>
+                 <td style="border: none;">: <%=data.customer.Title%> <%=i.CustomerName%></td>
                </tr>
                <tr>
                  <th style="border: none;text-align: left;"> Invoice No.</th>
