--- a/server/views/CreditNote.ejs
+++ b/server/views/CreditNote.ejs
@@ -33,7 +33,7 @@
                         <li>Issued To:</li>   
                     </ul>
                     <ul class="ul2">
-                        <li> <%=data.customer.Name%> </li>
+                        <li><%=data.customer.Title%> <%=data.customer.Name%> </li>
                     </ul>
                 </div>
                 <div class="col3">
