--- a/server/views/NavjyotiOther.ejs
+++ b/server/views/NavjyotiOther.ejs
@@ -150,7 +150,7 @@
                </tr>
                <tr>
                   <th style="text-align: left; width: 20%;"> Name </th>
-                  <td>: <%=data.customer.Name%></td>
+                  <td>: <%=data.customer.Title%> <%=data.customer.Name%></td>
                </tr>
                <tr>
                   <th style="text-align: left; width: 20%;"> Age </th>
