--- a/server/views/OrderForm.ejs
+++ b/server/views/OrderForm.ejs
@@ -44,7 +44,7 @@
                <li>DeliveryDate</li>
              </ul>
              <ul class="ul2">
-                <li>: <%=data.customer.Name%></li>
+                <li>: <%=data.customer.Title%> <%=data.customer.Name%></li>
                 <li>: <%=data.billMaster.DeliveryDate%></li>
              </ul>
           </div>
