--- a/server/views/Santosh_Optical.ejs
+++ b/server/views/Santosh_Optical.ejs
@@ -191,7 +191,7 @@
                  <div style="font-weight: 600;">: <%=data.billMaster.TrayNo%></div>
                  <div style="font-weight: 600;">: <%=data.billMaster.InvoiceNo%></div>
                  <div>: <%=data.customer.Idd%></div>
-                 <div style="font-weight: 600;">: <%=data.customer.Name%></div>
+                 <div style="font-weight: 600;">: <%=data.customer.Title%> <%=data.customer.Name%></div>
                   </div>
                   <div style="width:20%; float: left; font-size: 15px;font-weight: 600; ">
                      <div style="color: rgb(238, 1, 1);"> O/C</div>
