--- a/server/views/arabic.ejs
+++ b/server/views/arabic.ejs
@@ -308,7 +308,7 @@
           <%=data.billMaster.InvoiceNo%>
         </p>
         <p>
-          <%=data.customer.Name%>
+          <%=data.customer.Title%> <%=data.customer.Name%>
         </p>
         <p>
           <%=data.customer.MobileNo1%>
