--- a/server/views/billOrder_form.ejs
+++ b/server/views/billOrder_form.ejs
@@ -300,7 +300,7 @@
     <section style="border: 1px solid #000; height: 1150px; ">
         <div class="row3">
             <div class="col1">
-                <p><b style="padding-right: 5px;">Name:</b> <%=data.customer.Name%></p>
+                <p><b style="padding-right: 5px;">Name:</b> <%=data.customer.Title%> <%=data.customer.Name%></p>
             </div>
             <div class="col2">
                 <p><b style="padding-right: 5px;">Contact No.</b><%=data.customer.MobileNo1%></p>
@@ -472,7 +472,7 @@
         </div>
         <div class="row3">
             <div class="col1">
-                <p style="font-size:20px !important"><b style="padding-right: 5px;">Name:</b> <%=data.customer.Name%></p>
+                <p style="font-size:20px !important"><b style="padding-right: 5px;">Name:</b> <%=data.customer.Title%> <%=data.customer.Name%></p>
             </div>
             <div class="col2">
                 <p style="font-size:20px !important"><b style="padding-right: 5px;">Contact No.</b> <%=data.customer.MobileNo1%></p>
