--- a/server/views/customerPowerPDF.ejs
+++ b/server/views/customerPowerPDF.ejs
@@ -48,7 +48,7 @@
             <p class="cus_p">Address </p>
          </div>
          <div class="col-2">
-            <p class="cus_p"> : <%=data.customer.Name%> </p>
+            <p class="cus_p"> : <%=data.customer.Title%> <%=data.customer.Name%> </p>
             <p class="cus_p"> : <%=data.customer.MobileNo1%> </p>
             <p class="cus_p"> : <%=data.customer.Address%></p>
      
