--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -99,7 +99,7 @@
                                         <%=data.billMaster.InvoiceNo%>
                                     </li>
                                     <li>
-                                        <%=data.customer.Name%>
+                                        <%=data.customer.Title%> <%=data.customer.Name%>
                                     </li>
                                     <li>
                                         <%=data.customer.MobileNo1%>
