--- a/server/views/aaradhay.ejs
+++ b/server/views/aaradhay.ejs
@@ -64,7 +64,7 @@ table td {
                </tr>
                <tr>
                   <th style="text-align: left; width: 20%;font-weight: 100;"> Name </th>
-                  <td>: <%=data.customer.Name%></td>
+                  <td>: <%=data.customer.Title%> <%=data.customer.Name%></td>
                </tr>
                <tr>
                   <th style="text-align: left; width: 20%;font-weight: 100;"> Age </th>
