--- a/server/views/invoiceSapphire.ejs
+++ b/server/views/invoiceSapphire.ejs
@@ -103,7 +103,7 @@
                                         <%=data.billMaster.InvoiceNo%>
                                     </li>
                                     <li>
-                                        <%=data.customer.Name%>
+                                        <%=data.customer.Title%> <%=data.customer.Name%>
                                     </li>
                                     <li>
                                         <%=data.customer.MobileNo1%>
