--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -296,13 +296,15 @@
                         </div>
                         <div class="col-lg-6 col-md-6 mb-0">
                             <mat-form-field class="example-full-width mb-0">
-                                <mat-label>BillName</mat-label>
+                                <mat-label >BillName </mat-label>
                                 <input matInput name="BillName" [(ngModel)]="data.BillName" #BillNamecontrol>
                                 <mat-error>
                                     BillName is required
                                 </mat-error>
                             </mat-form-field>
-                        </div>
+                            <p style="font-size: 8px;"> <b>COMPOSITION:</b>  InvoiceNo./Total/Bill Of Supply/Cash Memo  || <b>REGULAR:</b>  InvoiceNo./Total/Tax Invoice/Cash Memo</p>
+
+                        </div>  
                     </div>
                 </div>
                 <div class="col-md-2 col-11 ">
