--- a/web1/src/app/report/inventory-report/inventory-report.component.css
+++ b/web1/src/app/report/inventory-report/inventory-report.component.css
@@ -4,6 +4,13 @@
     font-size: 15px;
     text-align: center;
 }
+.mat-icon {
+  pointer-events: none;
+}
+
+i {
+  pointer-events: none;
+}
 
 .excel {
     color: #458f37 !important;
