--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -1339,7 +1339,10 @@
         style="border: 2px solid #fff !important; width:100%; text-align:center">
         <thead>
           <tr>
-            <th>SNo.</th>
+            <th style="z-index: 0 !important;">
+              <mat-checkbox [(ngModel)]="selectAllChecked" name="checked"  (click)="selectBarcode('all')"></mat-checkbox>
+            </th>
+            <th >SNo.</th>
             <th>ProductName</th>
             <th>Qty</th>
             <th>Barcode</th>
@@ -1349,6 +1352,10 @@
         </thead>
         <tbody>
           <tr *ngFor="let s of inventoryList; let i = index">
+            <td><mat-checkbox [(ngModel)]="s.Checked" name="{{i + 'name'}}"
+              [checked]="s.Checked"
+              [ngModelOptions]="{standalone: true}" (click)="singleSelectBarcode(i)">
+          </mat-checkbox></td>
             <td>{{ i+1 }} </td>
             <td>{{ s.ProductName }}</td>
             <td>{{ s.Count }}</td>
@@ -1378,6 +1385,10 @@
       <div class="col-3">
         <button type="button" mat-raised-button color="primary" (click)="EditPrice()"> Edit
         </button>
+      </div>
+      <div class="col-3 mx-auto" >
+        <button (click)="barcodePrintAll()" type="button" class="mr-3" mat-raised-button
+        color="primary">PrintBarcode</button>
       </div>
       <div class="col-1 ms-auto">
         <button type="button" mat-raised-button color="primary" (click)="UpdatePrice()" [disabled]="!this.UpdatePriceEdit" > Update
