--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-md-2 col-6 ms-auto order-0 order-md-1">
                   <div class="input-group">
-                    <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
+                    <input placeholder="Search"  [(ngModel)]="term" #searching mdbInput type="search" id="form1"
                       class="form-control" />
                   </div>
                 </div>
@@ -126,7 +126,7 @@
                             <button title="Messenger" class="bg-btn msg">
                               <i class="fab fa-facebook-messenger"></i>
                             </button>
-                            <button title="Payment Hsitory" class="detail_icons bg-btn"
+                            <button title="Payment History" class="detail_icons bg-btn"
                               (click)="openModal(content,Bdata)">
                               <i class="fas fa-info-circle ms-1" data-mdb-toggle="modal"
                                 data-mdb-target="#exampleModal"> </i>
