--- a/server/views/OrderForm.ejs
+++ b/server/views/OrderForm.ejs
@@ -35,7 +35,7 @@
              </ul>
              <ul class="ul2">
                  <li>: <%=data.billMaster.InvoiceNo%></li>
-                 <li>: <%=data.billMaster.BillDate%> ;</li>
+                 <li>: <%=data.billMaster.BillDate%> </li>
              </ul>
           </div>
           <div class="col2">
