--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -5,6 +5,12 @@
             <div class="col-lg-1 col-md-2 col-6">
                 <h4 style="font-weight: 800;">New Bill </h4>
             </div>
+            <div class="col-lg-1 col-md-2 col-2">
+                
+                    <input placeholder="RegNo" name="RegNo" [(ngModel)]="BillMaster.RegNo"
+                     #RegNoNocontrol style="height: 20px;width: 115px;">
+            </div>
+            
             <div class="col-lg-1 col-md-2 p-0 col-4 ms-auto">
                 <mat-slide-toggle name="Multiple" color="primary" [(ngModel)]="disableAddButtons" class="example-margin"
                     #Multiplecontrol style="font-weight: 800;">
