--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -104,7 +104,7 @@
                                                         <table style="width:100%">
                                                             <thead>
                                                                 <tr>
-                                                                    <td>{{option.Name | uppercase}}</td>
+                                                                    <td>{{option.Title}} {{option.Name | uppercase}}</td>
                                                                     <td style="text-align: right;"> {{option.MobileNo1}}</td>
                                                                 </tr>
                                                             </thead>
