--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-lg-1 col-md-2 col-2">
                 
-                    <input placeholder="RegNo" name="RegNo" [(ngModel)]="BillMaster.RegNo"
+                    <input placeholder="No." name="RegNo" [(ngModel)]="BillMaster.RegNo"
                      #RegNoNocontrol style="height: 20px;width: 115px;">
             </div>
             
