--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-md-1 col-6 order-0 order-md-1 ms-auto">
                   <div class="input-group">
-                    <input placeholder="RegNo"  [(ngModel)]="term1" #RegNo mdbInput type="search" id="form1"
+                    <input placeholder="No."  [(ngModel)]="term1" #RegNo mdbInput type="search" id="form1"
                       class="form-control" />
                   </div>
                 </div>
@@ -106,7 +106,7 @@
                           <th>Cust_ID</th>
                           <th>Customer</th>
                           <th>MoblieNo.</th>
-                          <th>RegNo</th>
+                          <th>No.</th>
                           <th>Invoice#</th>
                           <th>InvoiceDate</th>
                           <th>ProductStatus</th>
